--- a/.github/workflows/nx-ci.yml
+++ b/.github/workflows/nx-ci.yml
@@ -108,7 +108,7 @@ jobs:
       - name: Install Railway CLI
         run: npm install -g @railway/cli
 
-      - name: Deploy via Railway using pre-built image
+      - name: Deploy via Railway
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
         run: |
@@ -116,10 +116,10 @@ jobs:
           retries=3
           if [ "${{ matrix.service }}" == "api" ]; then
             SERVICE_ID=896433a2-649c-4d47-b397-1c2e4918b4fe
-            IMAGE_TAG=${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/api:latest
+            IMAGE_TAG=ghcr.io/jaygovind/api:latest
           else
             SERVICE_ID=651af99c-48dd-4d98-85f4-a0bc78710924
-            IMAGE_TAG=${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/web:latest
+            IMAGE_TAG=ghcr.io/jaygovind/web:latest
           fi
 
           until [ $retries -le 0 ]; do
