--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,49 @@ jobs:
       - name: Nx Affected - Build
         run: npx nx affected --target=build --parallel=3
 
+  docker:
+    name: Build & Push Docker images
+    needs: verify
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build & push API
+        id: push-api
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/api:latest
+            ghcr.io/${{ github.repository_owner }}/api:${{ github.run_number }}
+
+      - name: Build & push Web
+        id: push-web
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/web:latest
+            ghcr.io/${{ github.repository_owner }}/web:${{ github.run_number }}
+
   deploy:
     name: Deploy API + Web
+    needs: docker
     runs-on: ubuntu-latest
-    needs: verify
     strategy:
       matrix:
         service: [api, web]
@@ -36,24 +75,23 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install Railway CLI
         run: npm install -g @railway/cli
-      - name: Deploy via Railway
+      - name: Deploy via Railway using pre-built image
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
         run: |
           set -e
           retries=3
-          SERVICE_ID=""
-          DOCKERFILE="Dockerfile"
-
           if [ "${{ matrix.service }}" == "api" ]; then
             SERVICE_ID=896433a2-649c-4d47-b397-1c2e4918b4fe
+            IMAGE_TAG=ghcr.io/${{ github.repository_owner }}/api:latest
           else
             SERVICE_ID=651af99c-48dd-4d98-85f4-a0bc78710924
+            IMAGE_TAG=ghcr.io/${{ github.repository_owner }}/web:latest
           fi
 
           until [ $retries -le 0 ]; do
             echo "Deploying ${{ matrix.service }}..."
-            railway up --ci --service $SERVICE_ID --dockerfile $DOCKERFILE . && break
+            railway up --ci --service $SERVICE_ID --image $IMAGE_TAG && break
             retries=$((retries-1))
             echo "Retrying deploy for ${{ matrix.service }}... ($retries left)"
             sleep 10
