--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install Railway CLI
         run: npm install -g @railway/cli
-      - name: Deploy via Railway using pre-built image
+
+      - name: Deploy via Railway
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
         run: |
@@ -83,15 +84,13 @@ jobs:
           retries=3
           if [ "${{ matrix.service }}" == "api" ]; then
             SERVICE_ID=896433a2-649c-4d47-b397-1c2e4918b4fe
-            IMAGE_TAG=ghcr.io/${{ github.repository_owner }}/api:latest
           else
             SERVICE_ID=651af99c-48dd-4d98-85f4-a0bc78710924
-            IMAGE_TAG=ghcr.io/${{ github.repository_owner }}/web:latest
           fi
 
           until [ $retries -le 0 ]; do
             echo "Deploying ${{ matrix.service }}..."
-            railway up --ci --service $SERVICE_ID . -- --image $IMAGE_TAG && break
+            railway up --ci --service $SERVICE_ID . && break
             retries=$((retries-1))
             echo "Retrying deploy for ${{ matrix.service }}... ($retries left)"
             sleep 10
