--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  pull_request:
 
 jobs:
   verify:
@@ -11,16 +12,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
+
       - name: Install dependencies
         run: npm install
+
       - name: Nx Affected - Lint
         run: npx nx affected --target=lint --parallel=3
+
       - name: Nx Affected - Test
         run: npx nx affected --target=test --parallel=3
+
       - name: Nx Affected - Build
         run: npx nx affected --target=build --parallel=3
 
@@ -33,7 +39,9 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v4
+
       - uses: docker/setup-buildx-action@v3
+
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
@@ -42,7 +50,6 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build & push API
-        id: push-api
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -53,7 +60,6 @@ jobs:
             ghcr.io/${{ github.repository_owner }}/api:${{ github.run_number }}
 
       - name: Build & push Web
-        id: push-web
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -73,6 +79,7 @@ jobs:
       max-parallel: 1
     steps:
       - uses: actions/checkout@v4
+
       - name: Install Railway CLI
         run: npm install -g @railway/cli
 
@@ -82,16 +89,19 @@ jobs:
         run: |
           set -e
           retries=3
+
           if [ "${{ matrix.service }}" == "api" ]; then
-            SERVICE_ID=896433a2-649c-4d47-b397-1c2e4918b4fe
+            SERVICE_PATH=apps/api
           else
-            SERVICE_ID=651af99c-48dd-4d98-85f4-a0bc78710924
+            SERVICE_PATH=apps/web
           fi
 
           until [ $retries -le 0 ]; do
-            echo "Deploying ${{ matrix.service }}..."
-            railway up --ci --service $SERVICE_ID . && break
+            echo "Deploying ${{ matrix.service }} from $SERVICE_PATH..."
+            cd $SERVICE_PATH
+            railway up --ci . && break
             retries=$((retries-1))
             echo "Retrying deploy for ${{ matrix.service }}... ($retries left)"
             sleep 10
+            cd ../..
           done
