--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ env:
   NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
   NX_DISABLE_CLOUD: ${{ secrets.NX_CLOUD_ACCESS_TOKEN == '' && 'true' || 'false' }}
   REGISTRY: ghcr.io
-  IMAGE_OWNER: ${{ tolower(github.repository_owner) }}
+  IMAGE_OWNER: ${{ github.repository_owner }}
 
 jobs:
   verify:
