--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Nx CI + CD (Railway Docker Ready - Option 2)
+name: Nx CI + CD (Railway Docker Ready)
 
 on:
   push:
@@ -59,7 +59,7 @@ jobs:
       - name: Build & push API
         uses: docker/build-push-action@v6
         with:
-          context: apps/api
+          context: .
           file: apps/api/Dockerfile
           push: true
           tags: |
@@ -69,7 +69,7 @@ jobs:
       - name: Build & push Web
         uses: docker/build-push-action@v6
         with:
-          context: apps/web
+          context: .
           file: apps/web/Dockerfile
           push: true
           tags: |
@@ -98,25 +98,22 @@ jobs:
           retries=3
 
           if [ "${{ matrix.service }}" == "api" ]; then
-            SERVICE_PATH=apps/api
+            IMAGE=${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/api:latest
             SERVICE_ID=896433a2-649c-4d47-b397-1c2e4918b4fe
           else
-            SERVICE_PATH=apps/web
+            IMAGE=${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/web:latest
             SERVICE_ID=651af99c-48dd-4d98-85f4-a0bc78710924
           fi
 
           until [ $retries -le 0 ]; do
-            echo "Deploying ${{ matrix.service }} from $SERVICE_PATH..."
-            cd $SERVICE_PATH
-            if railway up --ci --service $SERVICE_ID .; then
+            echo "Deploying ${{ matrix.service }} using image $IMAGE..."
+            if railway up --ci --service $SERVICE_ID --image $IMAGE; then
               echo "Deployment succeeded!"
-              cd ../..
               break
             fi
             retries=$((retries-1))
             echo "Retrying deploy for ${{ matrix.service }}... ($retries left)"
             sleep 10
-            cd ../..
           done
 
           if [ $retries -le 0 ]; then
