--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,7 @@ on:
 
 env:
   CI: "true"
-  NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
-  NX_DISABLE_CLOUD: ${{ secrets.NX_CLOUD_ACCESS_TOKEN == '' && 'true' || 'false' }}
+  NX_DISABLE_CLOUD: "true"        # Nx Cloud disabled for CI
   REGISTRY: ghcr.io
   IMAGE_OWNER: ${{ github.repository_owner }}
 
@@ -29,13 +28,13 @@ jobs:
         run: npm install
 
       - name: Nx Affected - Lint
-        run: npx nx affected --target=lint --parallel=3
+        run: npx nx affected --target=lint --parallel=3 --nx-cloud=false
 
       - name: Nx Affected - Test
-        run: npx nx affected --target=test --parallel=3
+        run: npx nx affected --target=test --parallel=3 --nx-cloud=false
 
       - name: Nx Affected - Build
-        run: npx nx affected --target=build --parallel=3
+        run: npx nx affected --target=build --parallel=3 --nx-cloud=false
 
   docker:
     name: Build & Push Docker images
