--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -2,7 +2,7 @@
 FROM node:20-alpine AS build
 WORKDIR /app
 
-# Root deps
+# Copy Web manifest
 COPY package.json package-lock.json ./
 COPY apps/web/package.json apps/web/package.json
 RUN npm ci --include=dev
@@ -10,17 +10,20 @@ RUN npm ci --include=dev
 # Copy full repo
 COPY . .
 
-# Build ONLY web workspace
+# Build web workspace
 RUN npm run --workspace apps/web build
 
 # ---------- Runtime ----------
-FROM node:20-alpine AS runtime
+FROM node:20-alpine
 WORKDIR /app/apps/web
 
+# Copy Next.js build artifacts
 COPY --from=build /app/apps/web/.next ./.next
 COPY --from=build /app/apps/web/public ./public
-COPY --from=build /app/node_modules /app/node_modules
 COPY --from=build /app/apps/web/package*.json ./
+
+# Copy node_modules
+COPY --from=build /app/node_modules /app/node_modules
 
 ENV NODE_ENV=production
 EXPOSE 3000
