--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -3,20 +3,22 @@ FROM node:20-alpine AS build
 RUN apk add --no-cache libc6-compat openssl
 WORKDIR /app
 
-# Copy API manifest
+# Copy root manifests
 COPY package.json package-lock.json ./
+
+# Copy API workspace manifest
 COPY apps/api/package.json apps/api/package.json
 
 # Install dependencies
 RUN npm ci --include=dev
 
-# Copy full API code
+# Copy full repo
 COPY . .
 
 # Generate Prisma client
 RUN npx prisma generate --schema apps/api/prisma/schema.prisma
 
-# Build API
+# Build API workspace
 RUN npm run --workspace apps/api build
 
 # ---------- Runtime ----------
