--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,92 +1,41 @@
-name: CI/CD - Nx + Railway (Per-app Dockerfile)
+name: CI/CD Deploy to Railway
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
 
-env:
-  CI: "true"
-  RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-
 jobs:
-  docker:
-    name: Build & Push Docker images
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: docker/setup-buildx-action@v3
-
-      - name: Login to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build & push API
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: apps/api/Dockerfile
-          push: true
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/api:latest
-            ghcr.io/${{ github.repository_owner }}/api:${{ github.run_number }}
-
-      - name: Build & push Web
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: apps/web/Dockerfile
-          push: true
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/web:latest
-            ghcr.io/${{ github.repository_owner }}/web:${{ github.run_number }}
-
   deploy:
-    name: Deploy API + Web
-    needs: docker
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        service: [api, web]
-      max-parallel: 1
+    env:
+      API_SERVICE_ID: ${{ secrets.RAILWAY_API_SERVICE_ID }}
+      WEB_SERVICE_ID: ${{ secrets.RAILWAY_WEB_SERVICE_ID }}
+      RAILWAY_API_KEY: ${{ secrets.RAILWAY_API_KEY }}
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
 
       - name: Install Railway CLI
-        run: npm install -g @railway/cli
-
-      - name: Deploy via Railway
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
         run: |
-          set -e
-          retries=3
+          curl -fsSL https://raw.githubusercontent.com/railwayapp/cli/master/install.sh | sh
+          railway whoami
 
-          if [ "${{ matrix.service }}" == "api" ]; then
-            SERVICE_ID=896433a2-649c-4d47-b397-1c2e4918b4fe
-          else
-            SERVICE_ID=651af99c-48dd-4d98-85f4-a0bc78710924
-          fi
+      # ---------------- API Deploy ----------------
+      - name: Deploy API
+        working-directory: apps/api
+        run: |
+          railway up --ci --service $API_SERVICE_ID
 
-          until [ $retries -le 0 ]; do
-            echo "Deploying ${{ matrix.service }} from root context..."
-            if railway up --ci --service $SERVICE_ID .; then
-              echo "Deployment succeeded!"
-              break
-            fi
-            retries=$((retries-1))
-            echo "Retrying deploy for ${{ matrix.service }}... ($retries left)"
-            sleep 10
-          done
-
-          if [ $retries -le 0 ]; then
-            echo "Deployment failed after multiple attempts!"
-            exit 1
-          fi
+      # ---------------- Web Deploy ----------------
+      - name: Deploy Web
+        working-directory: apps/web
+        run: |
+          railway up --ci --service $WEB_SERVICE_ID
